--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "python.analysis.extraPaths": ["./app"]
+  "python.analysis.extraPaths": ["./app"],
+  "python.testing.pytestArgs": [
+    "auth"
+  ],
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestEnabled": true
 }
